@@ -45,14 +45,14 @@ namespace CIAO
     const ::Deployment::InstanceDeploymentDescription &inst =
       plan.instance[index];
 
-    CIAO_DEBUG (9, (LM_TRACE, DLINFO
+    CIAO_DEBUG (9, (LM_TRACE, CLINFO
                      ACE_TEXT ("CIAO_StoreReferences_i::post_install - ")
                      ACE_TEXT ("Interceptor post install for instance %C\n"),
                      plan.instance[index].name.in ()));
 
     if (reference.type() == ::CORBA::_tc_null)
       {
-        CIAO_ERROR (3, (LM_WARNING, DLINFO
+        CIAO_ERROR (3, (LM_WARNING, CLINFO
                          ACE_TEXT ("CIAO_StoreReferences_i::post_install - ")
                          ACE_TEXT ("Got a nil reference, unable to store reference ")
                          ACE_TEXT ("for instance <%C>\n"),
@@ -71,7 +71,7 @@ namespace CIAO
 
             if (!(reference >>= CORBA::Any::to_object (obj)))
               {
-                CIAO_ERROR (1, (LM_WARNING, DLINFO
+                CIAO_ERROR (1, (LM_WARNING, CLINFO
                                  ACE_TEXT ("CIAO_StoreReferences_i::post_install - ")
                                  ACE_TEXT ("Unable to extract instance reference from Any\n")));
               }
@@ -79,7 +79,7 @@ namespace CIAO
             const char * name = 0;
             inst.configProperty[i].value >>= CORBA::Any::to_string (name, 0);
 
-            CIAO_DEBUG (9, (LM_TRACE, DLINFO
+            CIAO_DEBUG (9, (LM_TRACE, CLINFO
                              ACE_TEXT ("CIAO_StoreReferences_i::post_install - ")
                              ACE_TEXT ("Registering name %C for instance %C\n"),
                              name,
